--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
+# Dependencies
+/node_modules
+/bower_components
 
+# Build files
+/build
+/dist
+/.parcel-cache
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE/Editor specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS generated files
+.DS_Store
+Thumbs.db
